eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-api-service
  namespace: demo
spec:
  selector:
    app: bank-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
