eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ngnix
spec:
  controller: k8s.io/ingress-ngnix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-app-ingress
  namespace: demo
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-prod
spec:
  ingressClassName: ngnix
  tls:
    - hosts:
        - localhost
      secretName: bank-app-cert
  rules:
    - host: "localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bank-api-service
                port:
                  number: 80
#    - host: "*.foo.com"
#      http:
#        paths:
#          - pathType: Prefix
#            path: "/foo"
#            backend:
#              service:
#                name: service2
#                port:
#                  number: 80
